--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 
 media/projects/.DS_Store
 media/.DS_Store
+media/.DS_Store
+media/.DS_Store
+media/projects/.DS_Store
+media/projects/community/.DS_Store
+.DS_Store
